# waterproof-wrapper

./: .gitignore  CMakeLists.txt
.github/workflows/: compile-and-run.yml
doc/: .gitignore  Doxyfile
src/: CMakeLists.txt  conductor.cpp  conductor.h  main.cpp
src/posix/: api.h  api_wrapper.cpp  api_wrapper.h
src/sertop/: worker.cpp  worker.h  worker_posix.cpp  worker_win.cpp
src/utils/: buffers.cpp  buffers.h  config.cpp  config.h  exceptions.cpp  exceptions.h
src/waterproof/: message.cpp  message.h  server.cpp  server.h  server_posix.cpp  server_win.cpp
src/win/: api.h  api_wrapper.cpp  api_wrapper.h
